tests/requests/invalid/005.py
from gunicorn.http.errors import InvalidHeaderName
request = InvalidHeaderName